--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -30,8 +30,11 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build -PbuildNumber=${{ env.BUILD_NUMBER }}
 
+    - name: Rename APK with build number
+      run: mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/app-debug-${{ env.BUILD_NUMBER }}.apk
+
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: app-debug.apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+        name: app-debug-${{ env.BUILD_NUMBER }}.apk
+        path: app/build/outputs/apk/debug/app-debug-${{ env.BUILD_NUMBER }}.apk
